[package]
name = "espwner"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
esp-hal = { version = "1.1.0", features = ["defmt", "esp32c6", "unstable"] }
esp-radio = { version = "0.18.0", features = [
    "ble",
    "coex",
    "defmt",
    "esp-alloc",
    "esp32c6",
    "unstable",
    "wifi",
] }
esp-alloc = { version = "0.10.0", features = ["defmt", "esp32c6"] }

esp-rtos = { version = "0.3.0", features = [
    "defmt",
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32c6",
] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c6"] }

embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }

critical-section = "1.2.0"
static_cell = "2.1.1"


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.dev.package.esp-radio]
# The Wi-Fi driver requires higher optimization to operate reliably.
opt-level = 3

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2         # prefer slower builds but better debugging experience
lto = 'fat'
opt-level = 's'
